--- a/.gitattributes
+++ b/.gitattributes
@@ -6,3 +6,4 @@ models/similarity.pkl filter=lfs diff=lfs merge=lfs -text
 data/movies.csv filter=lfs diff=lfs merge=lfs -text
 data/tmdb_5000_credits.csv filter=lfs diff=lfs merge=lfs -text
 data/tmdb_5000_movies.csv filter=lfs diff=lfs merge=lfs -text
+data/*.csv filter=lfs diff=lfs merge=lfs -text
